Grid gap for big screens is no longer set in the framework

--- a/cardinal.css
+++ b/cardinal.css
@@ -43,12 +43,6 @@ main {
     margin: 0.5em auto;
 }
 
-@media (min-width: 50em) {
-    main {
-        gap: 1em;
-    }
-}
-
 div, h2 {
     text-overflow: ellipsis;
     overflow: hidden;
